Small version updates and suggestions from Intellij